[package]
name = "rgrok"
version = "0.1.0"
edition = "2018"

[lib]
name = "rgrok"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
color-eyre = "0.5.11"
crossbeam = "0.8.1"
ignore = "0.4.18"
itertools = "0.10.1"
lazy_static = "1.4.0"
proc-macro2 = {version = "1.0.28", features = ["span-locations"]}
rayon = "1.5.1"
regex = "1.5.4"
syn = { version = "1.0.75", features = ["parsing", "full"] }
syntect = "4.6.0"

[profile.dev]
opt-level = 3
incremental = true

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "rgrok"
harness = false

[profile.release]
debug = true
incremental = true
